maghrib maghrib bukannya solat

--- a/views/detaildelivery.ejs
+++ b/views/detaildelivery.ejs
@@ -145,7 +145,7 @@
                                 <th align="left">User Name</th>
                                 <th>Mobile No.</th>
                                 <th>Delivery Date</th>
-                                <th>Action</th>
+                                <th style="width: 100px;">Action</th>
                             </tr>
                             <% 
                             for(read of result){ 
