--- a/views/user.ejs
+++ b/views/user.ejs
@@ -21,7 +21,7 @@
 		</div>
 		<div class="mainbox size-std column">
 			<div class="title-content size-std" style="background-color: #68baf9; width: 100%; padding: 10px 10px; margin: 10px 5px; color: #ffffff;">
-				DASHBOARD > Service - <%= login.nameses %>
+				DASHBOARD > User
             </div>
             <div class="cols-12 column containt" style="margin: 10px 0; background-color: #ffffff;">
 				<div class="headtitle trans" style="margin-bottom: 0;">
@@ -29,7 +29,7 @@
 					<ul class="tab-image-setting nopad">
 						<li><img src="<%= baseurl() %>images/icon/arrow-up.png" class="btn-tab-toggle delay" href="deliveryrecent"></li>
 						<li>
-							<a href="<%= baseurl() %>service/upload">
+							<a href="<%= baseurl() %>user/create">
 								<img src="<%= baseurl() %>images/icon/plus.png" class="btn-tab-toggle delay">
 							</a>
 						</li>
