--- a/views/partials/sidebar.ejs
+++ b/views/partials/sidebar.ejs
@@ -7,7 +7,7 @@
         <li><a href="<%= baseurl() %>delivery" class="size-std"><img src="<%= baseurl() %>images/icon/upload-delivery.png">Delivery</a></li>
         <li><a href="<%= baseurl() %>service" class="size-std"><img src="<%= baseurl() %>images/icon/upload-service.png">Service</a></li>
         <% if(login.typeses=="admin" || login.typeses=="super"){ %>
-        <li><a href="<%= baseurl() %>service" class="size-std"><img src="<%= baseurl() %>images/icon/upload-service.png">Report</a></li>
+        <li><a href="<%= baseurl() %>service" class="size-std"><img src="<%= baseurl() %>images/icon/report.png">Report</a></li>
         <li><a href="<%= baseurl() %>user" class="size-std"><img src="<%= baseurl() %>images/icon/profile-blue.png">User</a></li>
         <% } %>
         <li><a href="<%= baseurl() %>logout" class="size-std"><img src="<%= baseurl() %>images/icon/logout-blue.png">Logout</a></li>
