--- a/views/login.ejs
+++ b/views/login.ejs
@@ -23,7 +23,7 @@
                     <tr>
                         <td>
                             <p><input type="email" name="email" placeholder="Your Email" value="johndoe@gmail.com"></p>
-                            <p><input type="password" name="password" placeholder="Your password" value="password"></p>
+                            <p><input type="password" name="password" placeholder="Your password" value="kadencexnissan"></p>
                             <p><input type="submit" value="Login" class="myButton-flat-green"></p>
                         </td>
                     </tr>
